<resources>
    <string name="app_name" translatable="false">Soul Parking Test</string>
    <string name="headline">Your Todo List</string>
    <string name="empty_message">Data Empty</string>
    <string name="add_todo">Add Todo</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="date_label">Date</string>
    <string name="save_todo">Save Todo</string>
    <string name="invalid_date_message">Please select date and time in the future.</string>
    <string name="todo_saved_successfully">Todo saved successfully!</string>
    <string name="failed_save_todo_message">Failed to save Todo. Please try again.</string>
    <string name="delete_todo">Delete Todo</string>
    <string name="delete_confirmation_message">Are you sure you want to delete this todo?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_todo">Update Todo</string>
    <string name="invalid_input_message">Please fill required fields</string>
</resources>